# Cuztomisable-Python

./: .gitignore  README.md  pyproject.toml
examples/: cuztomisable.example.ts  model.user.example.py  settings.example.py
src/cuztomisable/: __init__.py  application.py  cli.py  config.py  context.py  dependencies.py  errors.py  exceptions.py  settings.py
src/cuztomisable/db/: base.py  events.py
src/cuztomisable/db/migrations/: env.py
src/cuztomisable/db/models/: __init__.py  address.py  image.py  permission.py  phone.py  user.py
src/cuztomisable/db/seeders/: __init__.py  system_user.py
src/cuztomisable/emails/: __init__.py  base.py  email_verification.py  layout.py  mfa_code.py  new_login.py  new_registration.py  reset_password.py
src/cuztomisable/helpers/: __init__.py  dependencies.py  errors.py  identify.py  maskers.py  security.py  tablelify.py
src/cuztomisable/lang/: __init__.py  translations.py
src/cuztomisable/lang/en/: global.py  login.py  password.py  registration.py  validation.py
src/cuztomisable/middleware/: __init__.py  check_permission.py  ensure_valid_mobile_agent.py  require_admin.py  set_locale.py
src/cuztomisable/routers/: __init__.py  login.py  logout.py  me.py  refresh.py  registration.py  roles.py  settings.py  verification.py
src/cuztomisable/routers/auth/: login.py  logout.py  me.py  mfa.py  password.py  refresh.py  registration.py  (+1 more)
src/cuztomisable/schemas/: __init__.py  address.py  authentication.py  image.py  images.py  login.py  message.py  mixins.py  password.py  permission.py  phone.py  redirect.py  settings.py  tablelify.py  user.py  users.py
src/cuztomisable/services/: __init__.py  addresses.py  email_logs.py  images.py  mail.py  permissions.py  phones.py  role_permissions.py  roles.py  user_access_tokens.py  user_codes.py  user_ip_addresses.py  user_logs.py  user_password_resets.py  user_permissions.py  user_refresh_tokens.py  users.py
storage/emails/: 20260723_001138_783268_test-4780b7c6@example.com.html  20260723_001139_054106_test-077bebbc@example.com.html  20260723_001236_975176_test-7db81dc9@example.com.html  20260723_001237_213433_test-49e4d407@example.com.html  20260723_202759_611702_test-09733934@example.com.html  20260723_202759_853632_test-93e83cf4@example.com.html  20260723_223614_775260_test-544f6138@example.com.html  20260723_223615_012612_test-75c82efc@example.com.html  20260723_231715_182915_test-11b570f4@example.com.html  20260723_231715_436781_test-6f813b29@example.com.html
tests/: conftest.py
tests/auth/: test_password_reset.py
(+95 files in other folders)
