[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuztomisable"
version = "0.1.0"
description = "Authentication and user management for FastAPI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Michael VanDerwerker" }
]

dependencies = [
    "fastapi>=0.120",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib's internal bcrypt self-test is broken by bcrypt>=4.1's behavior
    # changes; pin below that until passlib (unmaintained since 2020) is fixed.
    "bcrypt<4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
cuztomisable = "cuztomisable.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]